--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,5 +25,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Start
         run: |
+          yarn
           yarn start
           ping localhost:3000/cover
