--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,11 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
+      - name: Install
+        run: yarn
+        
       - name: Start
-        run: |
-          yarn
-          yarn start
-          ping localhost:3000/cover
+        run: yarn start
+        
+      - name: Test
+        run: curl --location --request GET 'localhost:3000/cover'
