--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install
         run: yarn
         
-      - name: docker build
+      - name: docker 
         uses: actions/docker/cli@master
         with:
           args: build -t app .
