--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,21 +17,24 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    name: Test on node ${{ matrix.node_version }} and ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        node_version: ['12']
+        os: [ubuntu-latest]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a set of commands using the runners shell
-      - name: Install
-        run: yarn
-        
-      - name: docker build
-        uses: actions/docker/cli@master
+      - name: Use Node.js ${{ matrix.node_version }}
+        uses: actions/setup-node@v1
         with:
-          args: build -t app .
-        
-      - name: Test
-        run: curl --location --request GET 'localhost:3000/cover'
+          node-version: ${{ matrix.node_version }}
+
+      - name: npm install, build and test
+        run: |
+          npm install
+          npm start
+          curl --location --request GET 'localhost:3000/cover'
