--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,12 +38,17 @@ jobs:
       #     npm install
       #     npm start
       #     curl --location --request GET 'localhost:3000/cover'
-
-      - name: install
-        run: npm install
-
-      - name: build
-        run: npm start
+      
+      - name:  Docker build
+        # You may pin to the exact commit or the version.
+        # uses: docker/build-push-action@92e71463491f2d026a477188b8ad3a0fdd9d672c
+        uses: docker/build-push-action@v1.1.0
+        with:
+          tags: app
+          # Automatically tags the built image with the git reference as per the readme
+  
+      - name: Docker run
+        run: docker run app -d
 
       - name: test
         run: curl --location --request GET 'localhost:3000/cover'
