--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,16 +39,16 @@ jobs:
       #     npm start
       #     curl --location --request GET 'localhost:3000/cover'
       
-      - name:  Docker build
-        # You may pin to the exact commit or the version.
-        # uses: docker/build-push-action@92e71463491f2d026a477188b8ad3a0fdd9d672c
-        uses: docker/build-push-action@v1.1.0
-        with:
-          tags: app
+      # - name:  Docker build
+      #   # You may pin to the exact commit or the version.
+      #   # uses: docker/build-push-action@92e71463491f2d026a477188b8ad3a0fdd9d672c
+      #   uses: docker/build-push-action@v1.1.0
+      #   with:
+      #     tags: app
           # Automatically tags the built image with the git reference as per the readme
   
-      - name: Docker run
-        run: docker run app -d
+      - name: Install
+        run: npm install
 
-      - name: test
-        run: curl --location --request GET 'localhost:3000/cover'
+      # - name: test
+      #   run: curl --location --request GET 'localhost:3000/cover'
