--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,12 +33,11 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
 
-      # - name: npm install, build and test
-      #   run: |
-      #     npm install
-      #     npm start
-      #     curl --location --request GET 'localhost:3000/cover'
-      
+      - name: Deploy branch
+        run: |
+          export branch=$(git rev-parse --abbrev-ref HEAD)
+          git push heroku $branch:development
+                
       # - name:  Docker build
       #   # You may pin to the exact commit or the version.
       #   # uses: docker/build-push-action@92e71463491f2d026a477188b8ad3a0fdd9d672c
