--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
 
+      - uses: actions/checkout@v2
       - name: Deploy branch
         run: |
           export branch=$(git rev-parse --abbrev-ref HEAD)
