--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,25 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Pipeline
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the development branch
 on:
   push:
-    branches: [ development ]
+    branches:
+    - development
+    - feat/*
   pull_request:
     branches: [ development ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a set of commands using the runners shell
-      - name: Install
-        run: yarn
-        
-      - name: Start
-        run: yarn start
-        
-      - name: Test
-        run: curl --location --request GET 'localhost:3000/cover'
+      - uses: akhileshns/heroku-deploy@v3.4.6 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "arvore-app-api" #Must be unique in Heroku
+          heroku_email: "truestrongberries@gmail.com"
