--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "export NODE_ENV=development && nodemon server.js",
+    "db": "export NODE_ENV=development && knex migrate:latest",
+    "db:prod": "export NODE_ENV=production && knex migrate:latest"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,9 +13,12 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pg": "^8.3.3",
+    "knex": "^0.21.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "sqlite3": "^5.0.0"
   }
 }
