New APIs endpoints

--- a/package.json
+++ b/package.json
@@ -3,17 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "db": "knex migrate:latest",
+    "db:prod": "export NODE_ENV=production && knex migrate:latest"
   },
   "dependencies": {
+    "aws-sdk": "^2.747.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "install": "^0.13.0",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "knex": "^0.21.5",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
+    "pg": "^8.3.3",
+    "sqlite3": "^5.0.0",
+    "xmlhttprequest": "^1.8.0"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.4"
-  }
+  "devDependencies": {}
 }
